--- a/styles/style.css
+++ b/styles/style.css
@@ -7,15 +7,14 @@
 }
 
 .bannar-section {
-    background-image: url(../images/banner/banner3.png);
-    background-image: cover;
-    width: 1600px;
-    height: 600px;
+    width: 100%;
+    height: 100vh;
+    background-image: url('../images/banner/banner3.png');
+    background-position: center;
     text-align: right;
-    top: 200px;
-
+    align-items:center;
+    padding-top: 180px;
 }
-
 .vannar-titel {
     color: white;
     font-weight: 600;
@@ -40,12 +39,12 @@
 
 .btn-primary {
     color: rgb(17, 86, 233);
-    width: 160px;
-    height: 62px;
+    width: 150px;
+    height: 55px;
     margin-right: 200px;
     margin-top: 24px;
     border: none;
-    border-radius: 7px;
+    border-radius: 8px;
     font-weight: 600;
     padding: 20px;
     font-size: 15px;
@@ -53,14 +52,17 @@
 
 .main {
     max-width: 1140px;
+    height: 100vh;
     margin: 0 auto;
+    background-color: aliceblue;
+    /* margin-bottom: 80px; */
 }
 
 .my-section {
     max-width: 1140px;
     margin: 0 auto;
     display: flex;
-    top: 50px;
+    top: 100px;
 
 }
 
@@ -139,7 +141,7 @@ li i {
 }
 
 .sub-bg {
-    background-image: url('../images/watch.png');
+    background-image:  linear-gradient(90deg, #005FAC 0%, rgba(0, 95, 172, 0) 100%),url("../images/watch.png");
     height: 200px;
     width: 1000px;
     margin-top: 100px;
@@ -178,7 +180,7 @@ footer{
     width: 100%;
     height: 550px;
     background-color: black;
-    margin-top: 80px;
+    
 }
 
 .main-footer{
@@ -190,6 +192,7 @@ footer{
     color: #FFFFFF;
     margin-left: 200px;
     top: 100px;
+    padding-top: 150px;
 }
 .footer-title{
 font-weight: 700;
@@ -215,9 +218,11 @@ margin-bottom: 30px;
     color: #FFFFFF;
     margin-right: 200px;
     top: 100px;
+    padding-right: 150px;
 }
 .footer-right-title{
     margin-bottom: 30px;
+    padding-top: 150px;
 }
 #footer-id{
     width: 280px;
