--- a/styles/style.css
+++ b/styles/style.css
@@ -65,6 +65,9 @@
     top: 100px;
 
 }
+.my-failurs{
+
+}
 
 .my-img-section img {
     width: 400px;
@@ -81,7 +84,7 @@
     font-family: 'Work Sans';
     font-style: normal;
     font-weight: 700;
-    font-size: 35px;
+    font-size: 20px;
     line-height: 45px;
     margin-bottom: 24px;
 }
@@ -125,8 +128,9 @@ li i {
 
 .my-plan-title {
     text-align: center;
-    margin-top: 100px;
+    margin-top: 80px;
     font-weight: 600;
+    font-size: 35px
 
 }
 
@@ -141,7 +145,8 @@ li i {
 }
 
 .sub-bg {
-    background-image:  linear-gradient(90deg, #005FAC 0%, rgba(0, 95, 172, 0) 100%),url("../images/watch.png");
+    background-image:linear-gradient(90deg, #005FAC 0%, rgba(0, 95, 172, 0) 100%),url("../images/watch.png");
+    /* background-blend-mode:overlay; */
     height: 200px;
     width: 1000px;
     margin-top: 100px;
