--- a/styles/style.css
+++ b/styles/style.css
@@ -50,7 +50,7 @@
     font-size: 15px;
 }
 
-.main {
+.main ,.teams {
     max-width: 1140px;
     height: 100vh;
     margin: 0 auto;
@@ -185,6 +185,7 @@ footer{
     width: 100%;
     height: 550px;
     background-color: black;
+    margin-bottom: 5px;
     
 }
 
@@ -236,7 +237,7 @@ margin-bottom: 30px;
     border: none;
     padding: 15px;
 }
-.subscribe{
+.subscribe,.contuct-us{
     margin-top: 16px;
     width: 170px;
     height: 45px;
@@ -246,4 +247,66 @@ margin-bottom: 30px;
     padding: 10px;
     font-weight: 600;
 
+}
+
+
+.teams{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 16px;
+    margin-bottom: 10px;
+}
+.team-left{
+    display: flex;
+    margin: 30px;
+}
+.team-right{
+    text-align: left;
+    /* justify-items: center;
+    justify-content: center; */
+    padding-top: 150px;
+  
+}
+.team-person{
+width: 200px;
+height: 300px;
+box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+transition: 0.3s;
+margin: 5px;
+background-color: rgb(81, 100, 156);
+border: none;
+border-radius: 8px;
+text-align: center;
+color: beige;
+padding: 14px;
+
+}
+.team-person:hover {
+    box-shadow: 0 8px 16px 0 rgba(18, 232, 113, 0.1);
+    padding: 20px;
+  }
+
+.team-right h1{
+    margin-bottom: 16px;
+    font-weight: 600;
+    line-height: 26px; 
+}
+.team-right h4{
+    margin-bottom: 16px;
+    font-weight: 600;
+    line-height: 26px; 
+}
+
+
+.team-img{
+    width: 100px;
+    border: none;
+    border-radius: 60%;
+    padding: 10px;
+    height: 100px;
+    margin-bottom: 16px;
+
+}
+.contuct-us{
+    border: none;
 }
