--- a/styles/style.css
+++ b/styles/style.css
@@ -2,40 +2,40 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: font-family: 'Work Sans', sans-serif;
-    ;
+    font-family: "Work Sans", sans-serif;
 }
 
+/* Banner Section Start Now */
 .bannar-section {
     width: 100%;
     height: 100vh;
-    background-image: url('../images/banner/banner3.png');
+    background-image: url("../images/banner/banner3.png");
     background-position: center;
     text-align: right;
-    align-items:center;
+    align-items: center;
     padding-top: 180px;
 }
+
 .vannar-titel {
     color: white;
     font-weight: 600;
     line-height: 50px;
     font-size: 35px;
-    font-family: 'Work Sans', sans-serif;
+    font-family: "Work Sans", sans-serif;
     text-align: right;
     margin-right: 200px;
-
 }
 
 .vannar-discription {
-    color: #FFFFFF;
-    font-family: 'Work Sans', sans-serif;
+    color: #ffffff;
+    font-family: "Work Sans", sans-serif;
     font-size: 14px;
     text-align: right;
     line-height: 27px;
     margin-right: 200px;
     margin-top: 24px;
-
 }
+/* Bannar Section End */
 
 .btn-primary {
     color: rgb(17, 86, 233);
@@ -50,7 +50,8 @@
     font-size: 15px;
 }
 
-.main ,.teams {
+.main,
+.teams {
     max-width: 1140px;
     height: 100vh;
     margin: 0 auto;
@@ -63,10 +64,6 @@
     margin: 0 auto;
     display: flex;
     top: 100px;
-
-}
-.my-failurs{
-
 }
 
 .my-img-section img {
@@ -81,7 +78,7 @@
 }
 
 .my-desc-title {
-    font-family: 'Work Sans';
+    font-family: "Work Sans";
     font-style: normal;
     font-weight: 700;
     font-size: 20px;
@@ -90,7 +87,7 @@
 }
 
 .my-desc-pera {
-    font-family: 'Work Sans', sans-serif;
+    font-family: "Work Sans", sans-serif;
     margin-bottom: 16px;
     color: #444343;
     font-size: 15px;
@@ -104,8 +101,6 @@ ul {
     list-style-type: none;
     line-height: 26px;
 }
-
-.list-icon {}
 
 li i {
     color: rgb(16, 205, 16);
@@ -130,8 +125,7 @@ li i {
     text-align: center;
     margin-top: 80px;
     font-weight: 600;
-    font-size: 35px
-
+    font-size: 35px;
 }
 
 .my-pian-title {
@@ -139,13 +133,14 @@ li i {
 }
 
 .my-plan-para {
-    font-family: 'Work Sans', sans-serif;
+    font-family: "Work Sans", sans-serif;
     font-size: 13px;
     margin-top: 10px;
 }
 
 .sub-bg {
-    background-image:linear-gradient(90deg, #005FAC 0%, rgba(0, 95, 172, 0) 100%),url("../images/watch.png");
+    background-image: linear-gradient(90deg, #005fac 0%, rgba(0, 95, 172, 0) 100%),
+        url("../images/watch.png");
     /* background-blend-mode:overlay; */
     height: 200px;
     width: 1000px;
@@ -157,17 +152,15 @@ li i {
 }
 
 .sub-bg-title {
-    color: #FFFFFF;
-    font-family: 'Work Sans';
+    color: #ffffff;
+    font-family: "Work Sans";
     font-weight: 700;
     font-size: 30px;
     line-height: 45px;
     margin-left: 50px;
     top: 200px;
     padding: 20px;
-
 }
-
 .sub-bg-btn {
     position: absolute;
     color: rgb(17, 86, 233);
@@ -179,134 +172,150 @@ li i {
     font-weight: 600;
     padding: 5px;
     font-size: 15px;
-    
 }
-footer{
+
+.subscribe,
+.contuct-us {
+    margin-top: 16px;
+    width: 170px;
+    height: 45px;
+    color: #ffffff;
+    background-color: rgba(42, 95, 210, 0.922);
+    border-radius: 8px;
+    padding: 10px;
+    font-weight: 600;
+}
+
+.teams {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 16px;
+    margin-bottom: 10px;
+}
+
+.team-left {
+    display: flex;
+    margin: 30px;
+}
+
+.team-right {
+    text-align: left;
+    /* justify-items: center;
+    justify-content: center; */
+    padding-top: 150px;
+}
+
+.team-person {
+    width: 200px;
+    height: 300px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    margin: 5px;
+    background-color: rgb(81, 100, 156);
+    border: none;
+    border-radius: 8px;
+    text-align: center;
+    color: beige;
+    padding: 14px;
+}
+
+.team-person:hover {
+    box-shadow: 0 8px 16px 0 rgba(18, 232, 113, 0.1);
+    padding: 20px;
+}
+
+.team-right h1 {
+    margin-bottom: 16px;
+    font-weight: 600;
+    line-height: 26px;
+}
+
+.team-right h4 {
+    margin-bottom: 16px;
+    font-weight: 600;
+    line-height: 26px;
+}
+
+.team-img {
+    width: 100px;
+    border: none;
+    border-radius: 60%;
+    height: 100px;
+    margin-bottom: 16px;
+    border: 1px solid wheat;
+}
+
+.contuct-us {
+    border: none;
+}
+
+.card-img img {
+    width: 25px;
+    margin-top: 25px;
+    margin-right: 8px;
+}
+
+footer {
     width: 100%;
     height: 550px;
     background-color: black;
     margin-bottom: 5px;
-    
 }
 
-.main-footer{
+.main-footer {
     display: flex;
     justify-content: space-between;
     top: 100px;
 }
-.footer-left{
-    color: #FFFFFF;
+
+.footer-left {
+    color: #ffffff;
     margin-left: 200px;
     top: 100px;
     padding-top: 150px;
 }
-.footer-title{
-font-weight: 700;
-font-size: 40px;
-line-height: 53px;
-margin-bottom: 30px;
+
+.footer-title {
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 53px;
+    margin-bottom: 30px;
 }
-.footer-desc{
+
+.footer-desc {
     color: silver;
     font-size: 13px;
 }
-.footer-img{
+
+.footer-img {
     display: inline;
     border: none;
-   
 }
-.footer-img img{  
+
+.footer-img img {
     margin-right: 10px;
     width: 30px;
     border: none;
 }
-.footer-right{
-    color: #FFFFFF;
+
+.footer-right {
+    color: #ffffff;
     margin-right: 200px;
     top: 100px;
     padding-right: 150px;
 }
-.footer-right-title{
+
+.footer-right-title {
     margin-bottom: 30px;
     padding-top: 150px;
 }
-#footer-id{
+
+#footer-id {
     width: 280px;
     height: 45px;
     border-radius: 8px;
     border: none;
     padding: 15px;
 }
-.subscribe,.contuct-us{
-    margin-top: 16px;
-    width: 170px;
-    height: 45px;
-    color: #FFFFFF;
-    background-color: rgba(42, 95, 210, 0.922);; 
-    border-radius: 8px;
-    padding: 10px;
-    font-weight: 600;
-
-}
 
 
-.teams{
-    display: flex;
-    justify-content: space-between;
-    margin-top: 16px;
-    margin-bottom: 10px;
-}
-.team-left{
-    display: flex;
-    margin: 30px;
-}
-.team-right{
-    text-align: left;
-    /* justify-items: center;
-    justify-content: center; */
-    padding-top: 150px;
-  
-}
-.team-person{
-width: 200px;
-height: 300px;
-box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-transition: 0.3s;
-margin: 5px;
-background-color: rgb(81, 100, 156);
-border: none;
-border-radius: 8px;
-text-align: center;
-color: beige;
-padding: 14px;
-
-}
-.team-person:hover {
-    box-shadow: 0 8px 16px 0 rgba(18, 232, 113, 0.1);
-    padding: 20px;
-  }
-
-.team-right h1{
-    margin-bottom: 16px;
-    font-weight: 600;
-    line-height: 26px; 
-}
-.team-right h4{
-    margin-bottom: 16px;
-    font-weight: 600;
-    line-height: 26px; 
-}
-
-
-.team-img{
-    width: 100px;
-    border: none;
-    border-radius: 60%;
-    padding: 10px;
-    height: 100px;
-    margin-bottom: 16px;
-
-}
-.contuct-us{
-    border: none;
-}
